data/derived/sp14/progs/unify/prog2574.ml.out
Characters 90-94:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a * ('a -> 'b) -> 'a * ('a -> 'b)
       but an expression was expected of type 'a * ('a -> 'b) -> 'b
       The type variable 'b occurs inside 'a * ('a -> 'b)
